<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="170dp"
            android:maxHeight="170dp"
            android:layout_margin="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/user_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/user_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/subdued"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintMarginTop="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:contentPaddingTop="16dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="12dp"
            app:contentPaddingRight="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_description">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <LinearLayout
                   android:layout_width="86dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginEnd="24dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/specialty"
                       android:textColor="@color/subdued"
                       android:textSize="10sp"
                       tools:ignore="SmallSp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:text="@string/specialty_value"
                       android:maxLines="1"
                       android:textSize="16sp"
                       android:textStyle="bold" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="86dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginEnd="24dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/age"
                       android:textColor="@color/subdued"
                       android:textSize="10sp"
                       tools:ignore="SmallSp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:text="@string/age_value"
                       android:maxLines="1"
                       android:textSize="16sp"
                       android:textStyle="bold" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="86dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/height"
                       android:textColor="@color/subdued"
                       android:textSize="10sp"
                       tools:ignore="SmallSp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:text="@string/height_value"
                       android:maxLines="1"
                       android:textSize="16sp"
                       android:textStyle="bold" />
               </LinearLayout>
           </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/info_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/info_card">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_count"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="@color/subdued"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="@color/border" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribes_count"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/subscribes"
                    android:textAlignment="center"
                    android:textColor="@color/subdued"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="@color/border" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribers_count"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/subscribers"
                    android:textAlignment="center"
                    android:textColor="@color/subdued"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/info_account">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/subdued"
                android:text="@string/bio"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/interests_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_bio"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/interests_label"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitness"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swimming"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/programming"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/accent"
                app:chipStrokeColor="@color/accent"
                app:chipCornerRadius="12dp"
                app:chipMinHeight="26dp"
                app:ensureMinTouchTargetSize="false"/>
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
